--- a/full-stack.html
+++ b/full-stack.html
@@ -38,6 +38,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/canalplus/743999698569272-stage-developpeur-fullstack-f-h'>Groupe CANAL+ STAGE - D?veloppeur Fullstack - F/H | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/canalplus/743999698569746-alternance-developpeur-fullstack-si-f-h'>Groupe CANAL+ ALTERNANCE - D?veloppeur Fullstack SI - F/H | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='http://potentialpark.applytojob.com/apply/oXf6Lm3j7H/FullStack-Web-Developer'>Full-Stack Web Developer - Potentialpark - Career Page</a></h5> 
 <p><span class="badge badge-light">Stockholm Stockholm, Sweden</span></p>
 <p>Posted on: 2019-10-31</p>
@@ -62,11 +70,11 @@
 <p><span class="badge badge-light">Warsaw, Poland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=ooTFafwQ&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=npjlpMwJ'>Freedom Financial Network Careers - Senior Full Stack Engineer (Back End focused)</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=ooTFafwQ&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=npjlpMwJ'>Freedom Financial Network Careers - Senior Full Stack Engineer (Back End focused)</a></h5> 
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='http://netimpactstrategies.applytojob.com/apply/Wv9yjiOPiJ/Full-Stack-JavaScript-Developer'>Full Stack JavaScript Developer - NetImpact Strategies - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://netimpactstrategies.applytojob.com/apply/Wv9yjiOPiJ/Full-Stack-JavaScript-Developer'>Full Stack JavaScript Developer - NetImpact Strategies - Career Page</a></h5> 
 <p><span class="badge badge-light">Vienna Vienna</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -90,7 +98,7 @@
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pickar.join.com/jobs/465932-intern-as-full-stack-developer'>Job @ pickar (Remote): Intern as Full-Stack Developer | JOIN</a></h5> 
+<h5><a href='https://pickar.join.com/jobs/465932-intern-as-full-stack-developer'>Job @ pickar (Remote): Intern as Full-Stack Developer | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -122,11 +130,11 @@
 <p><span class="badge badge-light">Sydney</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qzYaVfwm&k=Job&j=oZisbfwE&__jvst=Employee&__jvsd=sT2QIgwe&__jvsc=Twitter&bid=nHodpMwY'>Brandwatch Careers - Full Stack Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qzYaVfwm&k=Job&j=oZisbfwE&__jvst=Employee&__jvsd=sT2QIgwe&__jvsc=Twitter&bid=nHodpMwY'>Brandwatch Careers - Full Stack Developer</a></h5> 
 <p><span class="badge badge-light">Brighton, England</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/notarize/c69af410-ed47-4185-800b-d5035cc7a5c6'>Notarize - Full-Stack Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/notarize/c69af410-ed47-4185-800b-d5035cc7a5c6'>Notarize - Full-Stack Engineer</a></h5> 
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -160,7 +168,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://idana.join.com/jobs/470927-fullstack-software-engineer-typescript-m-f-d'>Job @ Tomes (Freiburg im Breisgau): Fullstack Soft... | JOIN</a></h5> 
+<h5><a href='https://idana.join.com/jobs/470927-fullstack-software-engineer-typescript-m-f-d'>Job @ Tomes (Freiburg im Breisgau): Fullstack Soft... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -272,7 +280,7 @@
 <p><span class="badge badge-light">Chicago, Illinois Chicago</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tophatter/ff7b793d-3f49-46f9-afe6-074c388d1b47'>Tophatter - Full Stack Engineer (Intern)</a></h5> 
+<h5><a href='https://jobs.lever.co/tophatter/ff7b793d-3f49-46f9-afe6-074c388d1b47'>Tophatter - Full Stack Engineer (Intern)</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -280,7 +288,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://login.hirelocker.com/hr-interventions-ltd/jobs/11424/full-stack-c-net-developer-lahinch?source=Twitter'>Full Stack C#.Net Developer - HRLocker - Lahinch | HireLocker.com</a></h5> 
+<h5><a href='https://login.hirelocker.com/hr-interventions-ltd/jobs/11424/full-stack-c-net-developer-lahinch?source=Twitter'>Full Stack C#.Net Developer - HRLocker - Lahinch | HireLocker.com</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -296,7 +304,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/loandepot/job/oBFQafw0'>loanDepot Careers - Sr. Full Stack Software Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/loandepot/job/oBFQafw0'>loanDepot Careers - Sr. Full Stack Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -394,7 +402,7 @@
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=oZyQafwh&__jvst=Employee&__jvsd=sOJTqgwB&__jvsc=Twitter&bid=nPbPnMwt'>Freedom Financial Network Careers - Full Stack Developer (Platform)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=oZyQafwh&__jvst=Employee&__jvsd=sOJTqgwB&__jvsc=Twitter&bid=nPbPnMwt'>Freedom Financial Network Careers - Full Stack Developer (Platform)</a></h5> 
 <p><span class="badge badge-light">San Mateo, California  Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -422,7 +430,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Oct 14, 2019 ... Apply to Full Stack Developer at Quaero in Bengaluru, Karnataka, India.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://referrals.ibm.com/ibmreppify/jobs/199701?bpin=1046&com=2&rin=583440'>Job Profile - Application Developer: Java Full Stack</a></h5> 
+<h5><a href='https://referrals.ibm.com/ibmreppify/jobs/199701?bpin=1046&com=2&rin=583440'>Job Profile - Application Developer: Java Full Stack</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -442,16 +450,6 @@
 <p><span class="badge badge-light"></span></p>
 <p>Oct 16, 2019 ... We are currently recruiting at all levels from engineer to Technical Leads. Our 
 engineers love building things, solving complex challenges, learning new?...</p>
-<hr/>
-<h5><a href='https://apply.workable.com/psychology-today/j/EB70A521B4'>Full-Stack Engineer - Psychology Today</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Oct 16, 2019 ... If you're a talented Full-Stack Engineer looking for: Work/life balance; A product 
-and team that will inspire you; A healthy and profitable company; The freedom to
-?...</p>
-<hr/>
-<h5><a href='http://myelincommunicationsdbamerge.applytojob.com/apply/5WN0iDrKnc/Full-Stack-Developer-Associate-Winter-Internship'>Full Stack Developer Associate (Winter Internship) - Merge - Career Page</a></h5> 
-<p><span class="badge badge-light">Chicago, IL  Chicago</span></p>
-<p>Posted on: 2019-10-29</p>
 <hr/>
 
 
